example/secondfile/objects/DHStatus_Disposition_List__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters-Summary-DispositionList</description>
    <fields>
        <fullName>DHStatus_Testing_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters-Summary-DispositionList-DHStatus-Testing Details</description>
        <label>DHStatus-Testing Details</label>
        <referenceTo>DHStatus_Testing_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Disposition List</relationshipLabel>
        <relationshipName>DHStatus_Disposition_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disposition_Code__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters-Summary-DispositionList</description>
        <label>Disposition Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition_Description__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Intra Cloud Test Parameters-Summary-DispositionList</description>
        <label>Disposition Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Disposition List</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>DHStatus-DispositionList Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Disposition List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>